@@ -22,7 +22,7 @@ test80 test81 test82 test83 test84 test85 test86 test87 test507		\
 test149 test88 test89 test90 test508 test91 test92 test203 test93	\
 test94 test95 test509 test510 test97 test98 test99 test150 test151	\
 test152 test153 test154 test155 test156 test157 test158 test159 test511 \
-test160 test161
+test160 test161 test162
 
 # The following tests have been removed from the dist since they no longer
 # work. We need to fix the test suite's FTPS server first, then bring them
